--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.pt filter=lfs diff=lfs merge=lfs -text
 cifar-10-python.tar.gz filter=lfs diff=lfs merge=lfs -text
+annotations/triamps* filter=lfs diff=lfs merge=lfs -text
+images/* filter=lfs diff=lfs merge=lfs -text
